# BGSclient

./: CMakeLists.txt
include/: connectionHandler.h
src/: connectionHandler.cpp  echoClient.cpp
